Add FindAll endpoint Contract and implementation
